--- a/.cproject
+++ b/.cproject
@@ -17,19 +17,21 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="com.nvidia.cuda.ide.configuration.debug.389922274" name="Debug" parent="com.nvidia.cuda.ide.configuration.debug">
+				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="com.nvidia.cuda.ide.configuration.debug.389922274" name="Debug" parent="com.nvidia.cuda.ide.configuration.debug.389922274">
 					<folderInfo id="com.nvidia.cuda.ide.configuration.debug.389922274." name="/" resourcePath="">
-						<toolChain id="com.nvidia.cuda.tools.toolchain.exe.debug.921460118" name="CUDA Toolkit 7.0" superClass="com.nvidia.cuda.tools.toolchain.exe.debug">
+						<toolChain id="com.nvidia.cuda.tools.toolchain.exe.debug.921460118" name="CUDA Toolkit 7.0">
 							<targetPlatform archList="all" binaryParser="com.nvidia.cuda.ide.elf;com.nvidia.cuda.ide.macho;com.nvidia.cuda.ide.cubin" id="com.nvidia.cuda.ide.targetPlatform.297353316" isAbstract="false" name="Debug Platform" osList="linux,macosx" superClass="com.nvidia.cuda.ide.targetPlatform"/>
-							<builder buildPath="${workspace_loc:/CACUE}/Debug" id="com.nvidia.cuda.ide.builder.848746250" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="CUDA Toolkit 7.0 Builder" superClass="com.nvidia.cuda.ide.builder"/>
+							<builder buildPath="${workspace_loc:/CACUE}/Debug" id="com.nvidia.cuda.ide.builder.848746250" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="CUDA Toolkit 9.0 Builder" superClass="com.nvidia.cuda.ide.builder"/>
 							<tool id="nvcc.compiler.base.448122887" name="NVCC Compiler" superClass="nvcc.compiler.base">
 								<option id="nvcc.compiler.deviceDebug.855599904" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug" value="true" valueType="boolean"/>
 								<option id="nvcc.compiler.option.level.1389531644" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level" value="true" valueType="boolean"/>
 								<option defaultValue="nvcc.compiler.optimization.level.none" id="nvcc.compiler.optimization.level.1066874849" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
 								<option id="nvcc.compiler.pic.463546656" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
 								<option id="nvcc.compiler.cpp11option.868547389" name="Enable C++11 support (-std=c++11)" superClass="nvcc.compiler.cpp11option" value="true" valueType="boolean"/>
-								<option id="nvcc.compiler.include.files.1181990060" name="Include files (-include)" superClass="nvcc.compiler.include.files" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/opt/OpenBLAS/include/cblas.h"/>
+								<option id="nvcc.compiler.include.files.1181990060" name="Include files (-include)" superClass="nvcc.compiler.include.files" valueType="includeFiles"/>
+								<option id="nvcc.compiler.include.paths.1223319709" name="Include paths (-I)" superClass="nvcc.compiler.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/home/haofang/git/Openblas"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/opencv-2.4.13.6/include"/>
 								</option>
 								<inputType id="nvcc.compiler.input.cu.1345626797" superClass="nvcc.compiler.input.cu"/>
 								<inputType id="nvcc.compiler.input.cpp.970560555" superClass="nvcc.compiler.input.cpp"/>
@@ -37,10 +39,17 @@
 							</tool>
 							<tool id="nvcc.linker.base.845903991" name="NVCC Linker" superClass="nvcc.linker.base">
 								<option id="nvcc.linker.option.paths.1391034780" name="Library search path (-L)" superClass="nvcc.linker.option.paths" valueType="libPaths">
-									<listOptionValue builtIn="false" value="/opt/OpenBLAS/lib"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/Openblas/build/lib"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/opencv-2.4.13.6/build/lib"/>
 								</option>
 								<option id="nvcc.linker.option.userobjs.1506451689" name="Other objects" superClass="nvcc.linker.option.userobjs" valueType="userObjs">
-									<listOptionValue builtIn="false" value="/opt/OpenBLAS/lib/libopenblas.a"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/Openblas/build/lib/libopenblas.a"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/opencv-2.4.13.6/build/lib/cv2.so"/>
+								</option>
+								<option id="nvcc.linker.option.libs.376230777" name="Libraries (-l)" superClass="nvcc.linker.option.libs" valueType="libs">
+									<listOptionValue builtIn="false" value="opencv_highgui"/>
+									<listOptionValue builtIn="false" value="opencv_core"/>
+									<listOptionValue builtIn="false" value="opencv_imgproc"/>
 								</option>
 								<inputType id="nvcc.linker.input.479891536" superClass="nvcc.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -82,19 +91,21 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" errorParsers="org.eclipse.cdt.core.GASErrorParser;org.eclipse.cdt.core.GCCErrorParser;org.eclipse.cdt.core.GLDErrorParser;org.eclipse.cdt.core.GmakeErrorParser;org.eclipse.cdt.core.VCErrorParser;org.eclipse.cdt.core.CWDLocator;nvcc.errorParser;org.eclipse.cdt.core.MakeErrorParser" id="com.nvidia.cuda.ide.configuration.release.2006981783" name="Release" parent="com.nvidia.cuda.ide.configuration.release">
+				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" errorParsers="org.eclipse.cdt.core.GASErrorParser;org.eclipse.cdt.core.GCCErrorParser;org.eclipse.cdt.core.GLDErrorParser;org.eclipse.cdt.core.GmakeErrorParser;org.eclipse.cdt.core.VCErrorParser;org.eclipse.cdt.core.CWDLocator;nvcc.errorParser;org.eclipse.cdt.core.MakeErrorParser" id="com.nvidia.cuda.ide.configuration.release.2006981783" name="Release" parent="com.nvidia.cuda.ide.configuration.release.2006981783">
 					<folderInfo id="com.nvidia.cuda.ide.configuration.release.2006981783." name="/" resourcePath="">
-						<toolChain errorParsers="" id="com.nvidia.cuda.ide.toolchain.exe.release.2118388586" name="CUDA Toolkit 7.0" superClass="com.nvidia.cuda.ide.toolchain.exe.release">
+						<toolChain errorParsers="" id="com.nvidia.cuda.ide.toolchain.exe.release.2118388586" name="CUDA Toolkit 7.0">
 							<targetPlatform archList="all" binaryParser="com.nvidia.cuda.ide.elf;com.nvidia.cuda.ide.macho;com.nvidia.cuda.ide.cubin" id="com.nvidia.cuda.ide.targetPlatform.582005792" isAbstract="false" name="Debug Platform" osList="linux,macosx" superClass="com.nvidia.cuda.ide.targetPlatform"/>
-							<builder buildPath="${workspace_loc:/CACUE}/Release" errorParsers="org.eclipse.cdt.core.GmakeErrorParser" id="com.nvidia.cuda.ide.builder.1833603490" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="CUDA Toolkit 7.0 Builder" superClass="com.nvidia.cuda.ide.builder"/>
+							<builder buildPath="${workspace_loc:/CACUE}/Release" errorParsers="org.eclipse.cdt.core.GmakeErrorParser" id="com.nvidia.cuda.ide.builder.1833603490" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="CUDA Toolkit 9.0 Builder" superClass="com.nvidia.cuda.ide.builder"/>
 							<tool errorParsers="org.eclipse.cdt.core.VCErrorParser;nvcc.errorParser;org.eclipse.cdt.core.GCCErrorParser" id="nvcc.compiler.base.1180102289" name="NVCC Compiler" superClass="nvcc.compiler.base">
 								<option id="nvcc.compiler.deviceDebug.475783073" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug"/>
 								<option id="nvcc.compiler.option.level.1589516720" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level"/>
 								<option defaultValue="nvcc.compiler.optimization.level.most" id="nvcc.compiler.optimization.level.1923188068" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
 								<option id="nvcc.compiler.pic.1065621528" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
 								<option id="nvcc.compiler.cpp11option.324797362" name="Enable C++11 support (-std=c++11)" superClass="nvcc.compiler.cpp11option" value="true" valueType="boolean"/>
-								<option id="nvcc.compiler.include.files.656462292" name="Include files (-include)" superClass="nvcc.compiler.include.files" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/opt/OpenBLAS/include/cblas.h"/>
+								<option id="nvcc.compiler.include.files.656462292" name="Include files (-include)" superClass="nvcc.compiler.include.files" valueType="includeFiles"/>
+								<option id="nvcc.compiler.include.paths.820450234" name="Include paths (-I)" superClass="nvcc.compiler.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/home/haofang/git/Openblas"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/opencv-2.4.13.6/include"/>
 								</option>
 								<inputType id="nvcc.compiler.input.cu.468911908" superClass="nvcc.compiler.input.cu"/>
 								<inputType id="nvcc.compiler.input.cpp.946628454" superClass="nvcc.compiler.input.cpp"/>
@@ -102,14 +113,17 @@
 							</tool>
 							<tool errorParsers="org.eclipse.cdt.core.GLDErrorParser;nvcc.errorParser" id="nvcc.linker.base.1797869244" name="NVCC Linker" superClass="nvcc.linker.base">
 								<option id="nvcc.linker.option.paths.2080947434" name="Library search path (-L)" superClass="nvcc.linker.option.paths" valueType="libPaths">
-									<listOptionValue builtIn="false" value="/opt/OpenBLAS/lib"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/Openblas/build/lib"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/opencv-2.4.13.6/build/lib"/>
 								</option>
 								<option id="nvcc.linker.option.userobjs.151340370" name="Other objects" superClass="nvcc.linker.option.userobjs" valueType="userObjs">
-									<listOptionValue builtIn="false" value="/opt/OpenBLAS/lib/libopenblas.a"/>
-									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/libfftw3f.a"/>
-									<listOptionValue builtIn="false" value="/usr/local/cuda-7.0/lib64/libcublas.so"/>
+									<listOptionValue builtIn="false" value="/home/haofang/git/Openblas/build/lib/libopenblas.a"/>
 								</option>
-								<option id="nvcc.linker.option.libs.731381997" name="Libraries (-l)" superClass="nvcc.linker.option.libs" valueType="libs"/>
+								<option id="nvcc.linker.option.libs.731381997" name="Libraries (-l)" superClass="nvcc.linker.option.libs" valueType="libs">
+									<listOptionValue builtIn="false" value="libopencv_highgui"/>
+									<listOptionValue builtIn="false" value="libopencv_core"/>
+									<listOptionValue builtIn="false" value="libopencv_imgproc"/>
+								</option>
 								<inputType id="nvcc.linker.input.1223164363" superClass="nvcc.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -133,7 +147,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="CACUE.com.nvidia.cuda.ide.exe.893331336" name="Executable" projectType="com.nvidia.cuda.ide.exe"/>
+		<project id="CACUE.com.nvidia.cuda.ide.exe.893331336" name="Executable"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
